--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ionic-hello-world",
   "author": "Ionic Framework",
+  "start": "node server.js",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
@@ -20,9 +21,12 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
+    "body-parser": "^1.16.0",
+    "express": "^4.14.1",
     "ionic-angular": "2.0.0",
     "ionic-native": "^2.4.1",
     "ionicons": "3.0.0",
+    "mongodb": "^2.2.22",
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.6.26"
