--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "ionic-hello-world",
-  "author": "Ionic Framework",
- 
+  "name": "Willegram",
+  "author": "Juha Pekkarinen", 
+    "version": "0.0.1",
   "homepage": "http://ionicframework.com/",
+   "angular-cli": {},
   "private": true,
   "scripts": {
+        "ng": "ng",
      "start": "node server.js",
+      "lint": "tslint \"src/**/*.ts\"",
+       "test": "ng test",
+         "pree2e": "webdriver-manager update --standalone false --gecko false",
+         "e2e": "protractor",
+    "postinstall": "ng build",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "ionic:build": "ionic-app-scripts build",
@@ -14,6 +21,7 @@
   "dependencies": {
     "@angular/common": "2.2.1",
     "@angular/compiler": "2.2.1",
+     "angular-cli": "1.0.0-beta.24",
     "@angular/compiler-cli": "2.2.1",
     "@angular/core": "2.2.1",
     "@angular/forms": "2.2.1",
@@ -47,3 +55,4 @@
   "cordovaPlatforms": [],
   "description": "willegram: An Ionic project"
 }
+
