--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "Willegram",
-  "author": "Juha Pekkarinen", 
-    "version": "0.0.1",
+  "name": "ionic-hello-world",
+  "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
-   "angular-cli": {},
   "private": true,
   "scripts": {
-        "ng": "ng",
-     "start": "node server.js",
-      "lint": "tslint \"src/**/*.ts\"",
-       "test": "ng test",
-         "pree2e": "webdriver-manager update --standalone false --gecko false",
-         "e2e": "protractor",
+    "ng": "ng",
+    "start": "node server.js",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "protractor",
     "postinstall": "ng build",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
@@ -19,9 +17,9 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "angular-cli": "1.0.0-beta.24",
     "@angular/common": "2.2.1",
     "@angular/compiler": "2.2.1",
-     "angular-cli": "1.0.0-beta.24",
     "@angular/compiler-cli": "2.2.1",
     "@angular/core": "2.2.1",
     "@angular/forms": "2.2.1",
@@ -39,10 +37,12 @@
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.6.26"
+    
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.0.0",
-    "typescript": "2.0.9"
+    "typescript": "2.0.9",
+    "ts-node": "1.2.1"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
@@ -55,4 +55,3 @@
   "cordovaPlatforms": [],
   "description": "willegram: An Ionic project"
 }
-
