--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@ionic/storage": "^1.1.7",
     "angular-cli": "1.0.0-beta.24",
     "body-parser": "^1.16.0",
+    "cloudinary": "^1.6.0",
     "cors": "^2.8.1",
     "express": "^4.14.1",
     "ionic-angular": "2.0.0",
     "ionic-native": "^2.4.1",
     "ionicons": "3.0.0",
     "mongodb": "^2.2.22",
+    "multer-storage-cloudinary": "^2.2.1",
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.6.26"
