--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
+    "@cloudinary/angular": "^2.1.1",
     "@ionic/cloud-angular": "^0.9.1",
     "@ionic/storage": "^1.1.7",
     "angular-cli": "1.0.0-beta.24",
@@ -35,6 +36,7 @@
     "ionic-angular": "2.0.0",
     "ionic-native": "^2.4.1",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.22",
     "multer-storage-cloudinary": "^2.2.1",
     "rxjs": "5.0.0-beta.12",
@@ -43,8 +45,9 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.0.0",
-    "typescript": "2.0.9",
-    "ts-node": "1.2.1"
+    "@types/lodash": "4.14.52",
+    "ts-node": "1.2.1",
+    "typescript": "2.0.9"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
